2010-07-02  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Allow the `utc0' target to run again.

	* tools/bin/spp (main): Allow module `utc0'. 

2010-07-02  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bug in MT-Alpha code generation.

	When a program of the following form is compiled:

	{
	   foo();
	   p[...] = ...;
	}

	Then the instruction sequence becomes:

	   jsr
	   ldah $gp.... !gpdisp!... # gp reload 1st half
	   stq ...
	   ...
	   lda $gp, ... !gpdisp!... # gp reload 2nd half
	   ...
	   ret

	As an optimization, we remove all the load instructions that
	precede "ret" (end thread) because they are not necessary. However
	when doing so we may remove half of a GP reload. This makes the
	other half invalid (cannot be assembled on its own).

	This is fixed in this changeset by removing both halves of an
	unneeded GP reload.

	* tools/lib/slc/mtalpha/asmproc/base.py (munchret): Keep track of
	the deleted `lda' instructions that correspond to GP reloads.

	* tools/lib/slc/mtalpha/asmproc/base.py (killgpdisp): New. Remove
	the `ldah' instructions corresponding to killed GP reloads.

	* tools/lib/slc/mtalpha/asmproc/base.py (_filter_inner): Register
	the new phase.

2010-07-01  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance undocumented headers.

	* lib/include/undocumented.h: Emit warning on use (should not be
	used).
	* lib/include/sac_helpers.h: Use standard header names.

2010-07-01  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix support for `_mutable' parameter definitions.

	* tools/lib/t-spr/slimpl.m4,
	* tools/lib/t-sppalpha/slimpl.m4: Fix definitions of
	`sl_glparm_mutable' and `sl_glfparm_mutable'.

	* tools/lib/slc/input/parse.py (parse_argparm): Tolerate parameter
	types ending with `_parm'.

	* tools/lib/slc/mtalpha/visitors.py (TFun_2_MTATFun.visit_fundef):
	Fix typo `aname' -> `name'.

2010-06-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Optimize `slr' for the `ptl' target.

	Data layout for `ptl' and `seqc' are the same since they both use