@@ -46,6 +46,7 @@ m4_define([[sl__naked]], [[[[""", {'type':'attr', 'name':'naked', 'flavor':r""" 
 m4_define([[sl__exclusive]], [[[[""", {'type':'attr', 'name':'exclusive'}, r"""]]]])
 
 m4_define([[sl_def]],[[m4_dnl
+m4_pushdef([[return]],[[sl_end_thread]])m4_dnl
 m4_ifdef([[_sl_increate]],[[m4_fatal(missing sync after create)]])m4_dnl
 m4_pushdef([[_sl_curfun]],[[$1]])m4_dnl
 [[""", {'loc':r"""]]__file__:__line__[[""",'type':'fundef','name':"""$1""",'params':[]]m4_dnl
@@ -56,6 +57,7 @@ m4_shift2($@)[[]]m4_dnl
 m4_define([[sl_enddef]],[[m4_dnl
 [[""" ],'loc_end':r"""]]__file__:__line__[["""}, r"""]]
 m4_ifdef([[_sl_increate]],[[m4_fatal(missing sync after create)]])m4_dnl
+m4_popdef([[return]])m4_dnl
 m4_popdef([[_sl_curfun]])m4_dnl
 ]])
 
